; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_loose_lookup_to_packfile.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_loose_lookup_to_packfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.packref = type { i32, i32 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@GIT_SYMREF = common dso_local global i32 0, align 4
@PACKREF_WAS_LOOSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @loose_lookup_to_packfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loose_lookup_to_packfile(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.packref*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %9, i32* %6, align 4
  store %struct.packref* null, %struct.packref** %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i64 @loose_readbuffer(i32* %6, i32 %12, i8* %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = call i32 (...) @git_error_clear()
  br label %53

18:                                               ; preds = %2
  %19 = call i32 @git_buf_cstr(i32* %6)
  %20 = load i32, i32* @GIT_SYMREF, align 4
  %21 = call i32 @git__prefixcmp(i32 %19, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %18
  br label %53

24:                                               ; preds = %18
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @loose_parse_oid(i32* %8, i8* %25, i32* %6)
  store i32 %26, i32* %5, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %24
  br label %53

29:                                               ; preds = %24
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @git_sortedcache_wlock(i32 %32)
  %34 = bitcast %struct.packref** %7 to i8**
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i8*, i8** %4, align 8
  %39 = call i32 @git_sortedcache_upsert(i8** %34, i32 %37, i8* %38)
  store i32 %39, i32* %5, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %48, label %41

41:                                               ; preds = %29
  %42 = load %struct.packref*, %struct.packref** %7, align 8
  %43 = getelementptr inbounds %struct.packref, %struct.packref* %42, i32 0, i32 1
  %44 = call i32 @git_oid_cpy(i32* %43, i32* %8)
  %45 = load i32, i32* @PACKREF_WAS_LOOSE, align 4
  %46 = load %struct.packref*, %struct.packref** %7, align 8
  %47 = getelementptr inbounds %struct.packref, %struct.packref* %46, i32 0, i32 0
  store i32 %45, i32* %47, align 4
  br label %48

48:                                               ; preds = %41, %29
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @git_sortedcache_wunlock(i32 %51)
  br label %53

53:                                               ; preds = %48, %28, %23, %16
  %54 = call i32 @git_buf_dispose(i32* %6)
  %55 = load i32, i32* %5, align 4
  ret i32 %55
}

declare dso_local i64 @loose_readbuffer(i32*, i32, i8*) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @git__prefixcmp(i32, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @loose_parse_oid(i32*, i8*, i32*) #1

declare dso_local i32 @git_sortedcache_wlock(i32) #1

declare dso_local i32 @git_sortedcache_upsert(i8**, i32, i8*) #1

declare dso_local i32 @git_oid_cpy(i32*, i32*) #1

declare dso_local i32 @git_sortedcache_wunlock(i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
